--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -11,16 +11,19 @@
     "@mui/styled-engine-sc": "^6.1.5",
     "@mui/x-charts": "^7.22.0",
     "@mui/x-data-grid": "^7.22.0",
-    "@mui/x-date-pickers": "^7.22.0",
+    "@mui/x-date-pickers": "^7.22.2",
     "@mui/x-tree-view": "^7.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
