--- a/frontend/dashboard/package.json
+++ b/frontend/dashboard/package.json
@@ -11,6 +11,7 @@
     "@mui/styled-engine-sc": "^6.1.5",
     "@mui/x-charts": "^7.22.0",
     "@mui/x-data-grid": "^7.22.0",
+    "@mui/x-data-grid-generator": "^7.23.2",
     "@mui/x-date-pickers": "^7.22.2",
     "@mui/x-tree-view": "^7.22.0",
     "@testing-library/jest-dom": "^5.17.0",
