--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.8'
 
 services:
+  mongodb:
+    image: mongo:6.0
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27018:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password  
+
   frontend:
     build:
       context: ./frontend/dashboard
@@ -8,7 +18,21 @@ services:
     ports:
       - "3000:80" # Maps container's port 3000 to host's port 3000
     volumes:
-      - .:/app # For live updates in development
+      - ./frontend/dashboard:/app # Mount the frontend directory for live updates
       - /app/node_modules # Prevents overwriting node_modules
     environment:
         - NODE_ENV=development
+
+  backend:
+    build:
+      context: ./api/12G_Dashboard/12G_Dashboard
+      dockerfile: Dockerfile
+    depends_on:
+      - mongodb
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+#    volumes:
+#      - ./api/12G_Dashboard/12G_Dashboard:/app # Mount backend project directory for live updates
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
